@@ -1,4 +1,4 @@
-#!@SHELL@
+#!@KAWA_SHELL@
 thisfile=`which $0`
 thisdir=`dirname $thisfile`
 if [ "$#" -eq 0 ]
