@@ -81,3 +81,7 @@
 
 # Extra path for android.jar, used if enable.android.
 android.path=${env.ANDROID_HOME}/platforms/${env.ANDROID_PLATFORM}/android.jar
+
+# Shell to use for the kawa wrapper script.
+# Defaults to /bin/bash if available; otherwise /bin/sh.
+# kawa.shell=/bin/ksh
